# efind

./: AUTHORS  CMakeLists.txt  README  TODO
src/: efind_parser.y  list.c  list.h  main.c  parse_expr.c  parse_expr.h  scanner.c  scanner.h  scanner.re  strfind.c  strtotime.c  strtotime.h
test/: test1.c  test_time.c  test_time.h
